--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cra-template": "1.1.2",
     "font-awesome": "^4.7.0",
     "json-server": "^0.17.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
