--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@material-ui/core": "^4.12.3",
     "@reduxjs/toolkit": "^1.7.0",
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
